
However: only 1 type at a time !! 
Leave other params empty.
The next config will show the "poly":
<param name="point" value="">
<param name="segment" value="">
<param name="poly" value="-10:-10,5:5,10:-10">
<param name="line" value="">

Segment and line are the same ... for now.

Added more defaults to avoid problems with params.
Added some more error checking
While testing: Open Your Java Console !!

Increased amount or elementary rectangles per single "square_n" object to (width x height)

18/2/2008

Changed param syntax: square_color1 --> square1_color
added:
<param name="status" value="waiting"> used for interactive exercise
<param name="status" value="done"> used for showing correct drawing

Color cycling now limited to used colors in the defined "square1...square_n"
IMPORTANT: right mouse click changes color
IMPORTANT: left mouse click is used to make drawing

19/2/2008 (BPR)
New param to add some colors (eventually other than the one used for square)
<param name="color" value="purple,cyan">

Left mouse click can be used also to change color (hope it will be OK ! for computer with no right mouse)

22/2/2008 (BPR)
Left mouse click is not the background color at the beginning
change poly to polygon
fix bug (?): Ry*Ry-> MAX

28/2/2008 (BPR)
Change the name : it is now Clicktile !

28/2/2008 (BPR)
add param for image in background
<param name="image" value="http://..."><param name="copy" value="a,b">
(a and b are the coordinates in pixels of the left top corner of the image). 

To fix: if the coordinates of a square are not inside the range, the applet 
is opened, but the squares in this color can be changed (it should not)

27/12/2010 (JE)
uniform build via "ant"
to compile, type:
ant -v -l log.txt
fixed if given square not in xrange/yrange
revised mouselisteners
added painting with mouse drag (faster then just clicking
corrected ignored linewidth setting (now using Graphics2D...)

28/12/2010 (JE)
corrected paint_over_question...




 