@@ -9,6 +9,10 @@
  			var input=document.getElementById("Clicktile").ReadApplet(); 
  			alert(input);
  		    }
+		    function readxy(){
+ 			var input=document.getElementById("Clicktile").ReadXY(); 
+ 			alert(input);
+ 		    }
 		</script>
 		<applet id="Clicktile" code="Clicktile.class" codebase="dist" archive="Clicktile.jar" width="400" height="400">
 		    <param name="language" value="en">
@@ -30,7 +34,9 @@
 		    <param name="background_color" value="red">
 		</applet>
 	    <p>
-	    <input type="button" name=".....TEST......" value=".....TEST....." onclick="javascript:readthis();">
+	    <input type="button" name="ReadApplet" value="ReadApplet" onclick="javascript:readthis();">
+	    <br>
+	    <input type="button" name="ReadXY" value="ReadXY" onclick="javascript:readxy();">
 	    </p>
 	</body>
 </html>
