@@ -145,6 +145,15 @@ corrected ignored linewidth setting (now using Graphics2D...)
 28/12/2010 (JE)
 corrected paint_over_question...
 
+1/2/2011 (JE)
+added public function ReadXY()
+Very similar to ReadApplet()
+But only returning 2 lines : x-coordinate_list +"\n"+ y-coordinate_list
+x1,x2,x3...x_n +"\n"+ y1,y2,y3...y_n
+No color information.
+Can be used to speed up parsing data in WIMS
+See 1.html
+
 
 
 
